# asyncio

./: .gitignore  .travis.yml  BrewFile  CMakeLists.txt  LICENSE  README.md
asyncio/: CMakeLists.txt  allocator.hpp  asyncio.hpp  co_gen.hpp  common.hpp  config.hpp.in  coro.hpp  coroutine.hpp  do_test.cpp  eventloop.hpp  gen.hpp  log.hpp  loop.hpp  promise.cpp  promise.hpp  suspendable.cpp  suspendable.hpp  utility.hpp
asyncio/coro/: CMakeLists.txt  allocator.hpp  co_gen.hpp  coro.hpp  gen.hpp  promise.hpp  utility.hpp
asyncio/coro/tests/: CMakeLists.txt  allocator_test.cpp  co_drafts.cpp  co_gen_test.cpp  coro_test.cpp  coro_test_helper.hpp  gen_test.cpp  utility_test.cpp
asyncio/examples/: CMakeLists.txt  add_on_loop.cpp  adds.cpp  my_async_sleep.cpp  my_co_range.cpp  my_range.cpp  race.cpp  sleep_sort.cpp
asyncio/loop/: CMakeLists.txt  abstract_event_loop.hpp  abstract_handle.hpp  end_coro.hpp  event_loop.cpp  event_loop.hpp  extended_queue.hpp  future.hpp  handle_base.cpp  handle_base.hpp  loop_core.hpp  loop_exception.hpp  release_guard.hpp  sub_ref_coro.hpp  task.hpp  timer_future.hpp  timer_handle.cpp  timer_handle.hpp  uv_async_service.cpp  uv_async_service.hpp  uv_handle.cpp  uv_handle.hpp  uv_loop_core.cpp  uv_loop_core.hpp  uv_service.cpp  uv_service.hpp  uv_timer_handle.cpp  uv_timer_handle.hpp  uv_timer_service.cpp  uv_timer_service.hpp
asyncio/loop/tests/: CMakeLists.txt  event_loop_test.cpp  parameter_pack_test.cpp  queue_test.cpp  spy_test.cpp  timer_handle_test.cpp  trivial_loop.cpp  trivial_loop.hpp  uv_loop_core_test.cpp  uv_test.cpp
asyncio/tests/: CMakeLists.txt  allocator_test.cpp  co_drafts.cpp  co_gen_test.cpp  co_utility_test.cpp  coro_test.cpp  coro_test_helper.hpp  do_test.cpp  gen_test.cpp  std_promise_test.cpp  utility_test.cpp
asyncio/utility/: CMakeLists.txt  asleep.cpp  asleep.hpp  loop_awaitable.hpp  sleep.cpp  sleep.hpp  wait.cpp  wait.hpp
asyncio/utility/tests/: CMakeLists.txt  asleep_test.cpp  sleep_test.cpp  wait_test.cpp
cmake.modules/: cmake_uninstall.cmake.in
doc/: event_loop.md
docs/: coroutine.md  event_loop.md
